[package]
name = "facmod-rs"
description = "Download mods for Factorio"
authors = ["Nathaniel Graham <@ngraham20, @raevenant>"]
version = "0.5.0-beta"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.9", features = ["json"]}
serde_json = "1.0.75"
serde_yaml = "0.8.13"
error-chain = "0.12.4"
tokio = {version = "1.15.0", features = ["full"]}
log = "0.4.14"
env_logger = "0.9.0"
serde = {version = "1.0.117", features = ["derive"]}
clap = {version = "3.0.10", features = ["cargo"]}